# draw-and-recognize-mnist

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  characterrecog.cc  mnist.ipynb
notebook/: mnist.ipynb
